ecs_service.tf
resource "aws_ecs_service" "this" {
  name            = var.service_name
  launch_type     = "FARGATE"
  cluster         = var.cluster_arn
  task_definition = aws_ecs_task_definition.service.arn
  desired_count   = var.ecs_desired_count

  load_balancer {
    target_group_arn = aws_lb_target_group.blue.arn
    container_name   = var.load_balancer_container_name != null ? var.load_balancer_container_name : var.service_name
    container_port   = var.container_port
    advanced_configuration {
      alternate_target_group_arn = aws_lb_target_group.green
      production_listener_rule   = aws_lb_listener_rule.blue
      role_arn                   = aws_iam_role.ecs_infra_lb_role.arn
    }
  }

  network_configuration {
    subnets         = var.subnets
    security_groups = [aws_security_group.ecs_task.id]
    # If you are using Fargate tasks, in order for the task to pull the container image it must either use a public subnet and be assigned a
    # public IP address or a private subnet that has a route to the internet or a NAT gateway that can route requests to the internet.
    assign_public_ip = var.assign_public_ip
  }

  # This allows dynamic scaling and external deployments
  lifecycle {
    ignore_changes = [
      desired_count,
      task_definition,
      load_balancer
    ]
  }

  deployment_configuration {
    strategy             = "BLUE_GREEN"
    bake_time_in_minutes = "5"
  }

  deployment_circuit_breaker {
    enable   = true
    rollback = true
  }
}
